# (C) Copyright IBM 2022.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals.

add_subdirectory(OQ3ToStandard)
add_subdirectory(QUIRToPulse)
add_subdirectory(QUIRToStandard)
